added founder quotes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div class="yui-gd">
 	    		<div class="yui-u first">
 				<h1 id='first_col'>Save Time and Money</h1>
-				<p>Breeasy.com is a small business management platform that helps you run your business, keep your customers and suppliers happy, and manage your accounts receivable and cash.  Our applications, <a href="http://www.breeasy.com/products/breeasy-for-business">Breeasy for Business</a> and <a href="http://www.breeasy.com/products/breeasy-billing-center">The Breeasy Billing Center</a>, are designed, priced, and supported by and for small business.
+				<p>Breeasy.com is a small business management platform that helps you run your business, keep your customers and suppliers happy, and manage your accounts receivable and cash.  Our applications, <a href="http://www.breeasy.com/products/breeasy-for-business">Breeasy for Business</a> and <a href="http://www.breeasy.com/products/breeasy-billing-center">The Breeasy Billing Center</a> are designed, priced, and supported by and for small business.
 				</p>
 				<ul class="features">
 					<li>Manage Clients, Suppliers, Customers, and Employees</li>
@@ -82,7 +82,7 @@
 					new TWTR.Widget({
 					  version: 2,
 					  type: 'profile',
-					  rpp: 4,
+					  rpp: 2,
 					  interval: 30000,
 					  width: 250,
 					  height: 300,
@@ -106,7 +106,11 @@
 					}).render().setUser('EasyBreeasy').start();
 					</script>
 		        </div>
+
 		    </div>
+<blockquote>"I designed and built Breeasy for Business because as a small business owner I couldn't find an app that met my needs. It needed to have a ton of features, be simple and easy to use, a strong community, and provide real value to its users both in utility and price.  I use it everyday."<br>
+- Tom 0., Founder, Breeasy.com - On why he created the <a href="http://www.breeasy.com/breeasy-for-business">small business management portal</a>.
+</blockquote>
 		    <br>
 			<div id='ft' class="center">
 				<p id='goodbye'>copyright &copy; 2011 - 2012 Breeasy.com</p>
