--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -77,10 +77,10 @@
 		        <li>Earn up to 20% of cash revenues.</li>
 		        </ul>
 		        <h2 class='section_header'>White Label and Licensing Manager</h2>
-		        <p>Breeasy is also looking for an experienced sales professional to sell/license its white label product and services. This position can be virtual, but the ideal candidate will be in San Diego CA or Phoenix AZ.  The primary objective is to introduce and license breeasy white label to customers interested in our innovative, value-added, opportunity.  Ideal customers are country and regional licensees, affinity organizations and successful internet retailers.</p>
+		        <p>Breeasy is also looking for an experienced sales professional to sell/license its white label product and services. This position can be virtual, but the ideal candidate will be in San Diego CA or Phoenix AZ.  The primary objective is to introduce and license breeasy white label to customers interested in our innovative, value-added, opportunity.  Ideal customers are country and regional licensees, affinity organizations and successful internet retailers that sell products and services to small business.  Secondarily, the ideal candidate will have experience in mail list referral programs.</p>
 		         <ul class="list">
 		       	<li>Use existing contacts and networks</li>
-		        <li>Develop Sales and Marketing strategies</li>
+		        <li>Develop Licensing, Sales and Marketing strategies</li>
 		        <li>Leverage Social Media and the Breeasy Brand</li>
 		        <li>Commission Only - Up to 20% on each sale with ongoing monthly revenue.</li>
 		        </ul>
