--- a/products/breeasy-billing-center/index.html
+++ b/products/breeasy-billing-center/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Billing, Cash Management, Free Invoice Software | Breeasy.com</title>
-	<meta name="description" content="The Breeasy Billing Center is a free app that helps small business get on top of their invoicing and collections.">
+	<title>Billing, Cash Management, Free Invoice Software, Cash Flow | Breeasy.com</title>
+	<meta name="description" content="The Breeasy Billing Center is a free app that helps small business get on top of their invoicing, cash flow and collections.">
 	<link rel="stylesheet" type="text/css" href="../../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../../css/base-min.css">
 	<link rel="stylesheet" type="text/css" href="../../css/breeasy.css">
@@ -76,6 +76,9 @@
 				</tr>
 			</tbody>
 			</table>
+			<blockquote>"After I built <a href"http://www.breeasy.com/breeasy-for-business">Breeasy for Business</a>, I felt something was missing.  Sometimes, you need a tool that does one thing, and does that one thing great.  Throughout my business career one of the biggest challenges I've faced is cash management and collections.  I've learned that getting invoices to clients quickly and accurately is the first step to good cash flow.  Because it's so important to every business, I decided this tool needs to be free, always."<br>
+- Tom 0., Founder, Breeasy.com - On what inspired him to create the <a href="http://www.breeasy.com/breeasy-billing-center">simple, free invoicing app</a>.
+</blockquote>
 			<p>Go get yours - your cash that is:  <a href="http://billing.breeasy.com">Bill Faster Today</a>.</p>
 		</div> <!-- yui-main -->
 
