--- a/data-security-privacy.html
+++ b/data-security-privacy.html
@@ -46,7 +46,8 @@
 			<div class="yui-b">
 				<div class="yui-g">
 				<h1>Small Business Focused</h1>
-				<p>Designed and built for small business by a small business, Breeasy.com the platform was created by Tom O'Brien after years of research and development.  Tired of CRM systems that didn't cater to or care about small business, he decided to build one that works for the rest of us. Now bringing Breeasy to market is his passion.  He is also the Co-Founder and Global COO of Data Insurance Licensing Ltd., a technology and insurance intermediary startup based in New Zealand.  An inventor with approved patents and patent applications throughout the world, He enjoys working with and consulting startups and small businesses around the world.  For additional details, please see his <a href="http://www.bootstraptechnology.com/about.html">CV/Resume</a>.</p>
+				<p>Designed and built for small business by a small business, Breeasy.com the platform was created by Tom O'Brien after years of research and development.  Tom is  founder and chief consultant at
+				BootStrap Technology Consulting.  Tired of CRM systems that didn't cater to or care about small business, he decided to build one that works for the rest of us. Now bringing Breeasy to market is his passion.  He is also the Co-Founder and Global COO of Data Insurance Licensing Ltd., a technology and insurance intermediary startup based in New Zealand.  An inventor with approved patents and patent applications throughout the world, He enjoys working with and consulting startups and small businesses around the world.  For additional details, please see his <a href="http://www.bootstraptechnology.com/about.html">CV/Resume</a>.</p>
 				<h2>FeedBack</h2>
 				Importantly, we want to hear your <a href="https://breeasy.desk.com">feedback and listen to your suggestions</a> in our forums.
 				<h2>Contact Us</h2>
