added feature content and fixed some broken links

--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -45,7 +45,7 @@
 			<div class="yui-g">
 			<h1>Opportunities at Breeasy.com</h1>
 			
-			<h2 class='section_header'>Affiliate Program</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://app.breeasy.com/signup">Signup</a> for a Free Breeasy Trial Account, run it through its paces, then join the Breeasy Affiliate Program.  You can earn commissions of up to 30% on new paid subscribers and 15% on renewals.  Some conditions apply.</p>
+			<h2 class='section_header'>Affiliate Program - Updated!</h2><p> Want to make some extra money referring Breeasy to your customers or advertise Breeasy on your website or newsletter? <a href="http://affiliate.breeasy.com/affiliate-home">Free Affiliate Program now available!</a>  You can earn commissions of up to 30% on new paid subscribers and 15% on renewals.  Some conditions apply.  See <a href="http://affiliate.breeasy.com/affiliate-home">Breeasy Affiliate Program </a> for details.</p>
 		
 		<h2 class='section_header'>White/Private Label and Licensing</h2>
 		<p>Looking to run your own web business?  Do you have or manage an existing business and are looking to add additional products and services that add value to your current offerings?  White Label Breeasy could be your answer.  </p>
@@ -89,7 +89,18 @@
 			<h1>Partner, Equity and Investment</h1>
 			<p>Breeasy <a href="http://www.breeasy.com">the small business management platform is growing</a> and we are looking for help.</p>
 			<h2>Partner Wanted</h2>
-			<a href="http://sandiego.craigslist.org/csd/bfs/3021133829.html">Social Business Platform Partner Needed</a>
+			<p>Breeasy.com is looking for a business partner who can help get our new cloud-based, small business management platform to the next level.  The ideal candidate would:
+			<ul>
+			<li>help source funding - up until now, the project has been bootstrapped.</li>
+			<li>market the service</li>
+			<li>maintain social marketing activities (FB, Twitter, LinkedIn, blog)</li>
+			<li>SEO/SEM</li>
+			</ul>
+			In exchange for these services, the right person will receive an equity earn-in position in the company, commission on sales/revenue and base salary upon the company receiving funding. This is a great ground floor opportunity for a self-driven professional to team with a entrepreneur with a track record. 
+
+			If you are interested and have a proven track record, please contact me.
+
+			Thanks and I look forward to hearing from you.</p>
 			<h2>Investment and Equity Available</h2>
 			<p>To help us fund our growth both in North America and internationally, a unique opportunity exists for investment in Breeasy.com.  Please contact <a href="http://www.breeasy.com/about.html">Tom O'Brien:</a>  tobrien@bootstraptechnology.com.</p>
 	    	</div>
