--- a/plans/index.html
+++ b/plans/index.html
@@ -76,7 +76,7 @@
 	    		<p>When you signup for a trial account or buy Breeasy for Business before June 30th, 2012, you will receive a 50% discount!  Just enter</p>
 	    		<p>Referral/Promo Code:
 	    		<b>Early Bird</b> </p>
-	    		<p>to get your discount.  The discount applies to all plans.  The promo code is applies to all <a href="http://app.breeasy.com">Risk Free Trial accounts started on or before June 30, 2012</a>. </p>
+	    		<p>to get your discount.  The discount applies to all plans.  The promo code applies to all <a href="http://app.breeasy.com">Risk Free Trial accounts started on or before June 30, 2012</a>. </p>
 	    		
 	    				    					
 	    		</div>
