--- a/products/breeasy-billing-center/index.html
+++ b/products/breeasy-billing-center/index.html
@@ -43,6 +43,7 @@
 			<div class="yui-gd"> <!-- 33/67 % split -->
 	    		<div class="yui-u first">
 	    		<h1>Get Paid Faster!</h1>
+	    		<h2>Breeasy Billing Center</h2>
 	    		<p>As a small business owner, you know that cash is the fuel that makes your business hum.  But you don't always have time to create an invoice or bill your customers quickly, efficiently and accurately.  Now, with the <a href="http://billing.breeasy.com">Breeasy Billing Center</a>, you don't have to wait.  You can Create invoices, Record payments, Run reports, and Manage your most important asset:  Cash. Speaking of which, The Breeasy Billing Center is totally free!</p>
 	    		</div>
 	    		<div class="yui-u">
@@ -77,7 +78,7 @@
 			</tbody>
 			</table>
 			<blockquote>"After I built <a href"http://www.breeasy.com/breeasy-for-business">Breeasy for Business</a>, I felt something was missing.  Sometimes, you need a tool that does one thing, and does that one thing great.  Throughout my business career one of the biggest challenges I've faced is cash management and collections.  I've learned that getting invoices to clients quickly and accurately is the first step to good cash flow.  Because it's so important to every business, I decided this tool needs to be free, always."<br>
-- Tom 0., Founder, Breeasy.com - On what inspired him to create the <a href="http://www.breeasy.com/breeasy-billing-center">simple, free invoicing app</a>.
+- Tom 0., Founder, Breeasy.com - On what inspired him to create the <a href="http://billing.breeasy.com">simple, free invoicing app</a>.
 </blockquote>
 			<p>Go get yours - your cash that is:  <a href="http://billing.breeasy.com">Bill Faster Today</a>.</p>
 		</div> <!-- yui-main -->
