--- a/products/breeasy-for-business/index.html
+++ b/products/breeasy-for-business/index.html
@@ -43,11 +43,12 @@
 			<div class="yui-gd">
 	    		<div class="yui-u first">
 	    		<h1>It's About Connections</h1>
+	    		<h2>Breeasy for Business</h2>
 	    		<p>Running a small business takes all your heart, effort and a ton of time. Managing customers, employees, consultants, accountants, and suppliers can chew up a big chunk of your day.  A part of that you would much rather use prospecting for new clients or spending time with your family and friends. <a href="http://app.breeasy.com">Breeasy for Business</a> helps you get organized and puts all your communications, tasks and to do's all in one place - accessible from any internet connected device:  mobile, desktop, laptop and tablet.</p>
 	    		<p>Breeasy for Business is loaded with a ton of features that get help get your small business organized, efficient and increase profits.  For a limited time Breeasy for Business has an <a href="http://www.breeasy.com/plans/index.html">Early Bird Special</a>.</p>
 	    		</div>
 	    		<div class="yui-u">
-	    		<img class="hero" src="../../images/social_business_connections.png" alt="Connect, Manage and Grow with Breeasy for Business" title="Don't worry, be happy.  It's Easy with Breeasy!" width="500" height="280" />
+	    		<img class="hero border" src="../../images/social_business_connections.png" alt="Connect, Manage and Grow with Breeasy for Business" title="Don't worry, be happy.  It's Easy with Breeasy!" width="500" height="280" />
 
 	    		</div>
 	    	</div>
@@ -86,7 +87,7 @@
 				<td><strong>Calendars</strong></td><td>See events across your organization.</td>
 				</tr>
 				<tr>
-				<td><strong>Lists</strong></td><td>Create and use repeatable Lists and attach them to tasks.</td>
+				<td><strong><a href="features/lists.html">Lists</a></strong></td><td>Create and use repeatable Lists and attach them to tasks.</td>
 				<td><strong>Daily Digest</strong></td><td>Your to dos, tasks and events delivered each mornig to your email.</td>
 				</tr>
 				<tr>
@@ -118,7 +119,7 @@
 				</tr>
 				<tr>
 				<td><strong>Account</strong></td><td>Your company - the top of the BfB food chain.</td>
-				<td><strong></strong></td><td></td>
+				<td><strong><a href="features/notepad.html">Notepad</strong></td><td>An easy way to keep your thoughts and notes organized.</td>
 				</tr>
 			</tbody>
 			</table>
