--- a/products/login-links.html
+++ b/products/login-links.html
@@ -41,8 +41,8 @@
 			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > Logins</div>
 		</div> <!-- hd -->
 		<div id='bd'>
-			<div class="yui-g">
-			<p>Use the link below to login to your Breeasy app:</p>
+			<div class="yui-gb">
+			<p>Use the links below to login to your favorite Breeasy app:</p>
 	    		<div class="yui-u first">
 	    			<h1>Breeasy for Business</h1>
 	    			<a href="http://app.breeasy.com/login">Breeasy for Business</a></div>
@@ -50,6 +50,10 @@
 	    			<h1>Breeasy Billing Center</h1>
 	    			<a href="http://billing.breeasy.com/users/sign_in">The Breeasy Billing Center</a></p>
 		
+	    		</div>
+	    		<div class="yui-u">
+	    		<h1>Breeasy Affiliate Program</h1>
+	    		<a href="http://affiliate.breeasy.com/login">The Breeasy Affiliate Program</a>
 	    		</div>
 			</div>
 			<br>
