--- a/about.html
+++ b/about.html
@@ -46,13 +46,14 @@
 			<div class="yui-b">
 				<div class="yui-g">
 				<h1>Small Business Focused</h1>
-				<p>Designed and built for small business by a small business, Breeasy.com the platform was created by Tom O'Brien after years of research and development.  Tired of CRM systems that didn't cater to or care about small business, he decided to build one that works for the rest of us. Now bringing Breeasy to market is his passion.  He is also the Co-Founder and Global COO of Data Insurance Licensing Ltd., a technology and insurance intermediary startup based in New Zealand.  An inventor with approved patents and patent applications throughout the world, He enjoys working with and consulting startups and small businesses around the world.  For additional details, please see his <a href="http://www.bootstraptechnology.com/about.html">CV/Resume</a>.</p>
+				<p>Designed and built for small business by a small business, Breeasy.com the platform was created by Tom O'Brien after years of research and development.  Tired of CRM systems that didn't cater to or care about small business, he decided to build one that works for the rest of us. Now bringing Breeasy to market is his passion.  He is also the Co-Founder and Global COO of Data Insurance Licensing Ltd., a technology and insurance intermediary startup based in New Zealand.  An inventor with approved patents and patent applications throughout the world, He enjoys working with and consulting startups and small businesses around the world.  For additional details, please see his <a href="http://www.bootstraptechnology.com/about-bootstrap-technology.html">CV/Resume</a>.</p>
 				<h2>FeedBack</h2>
 				Importantly, we want to hear your <a href="https://breeasy.desk.com">feedback and listen to your suggestions</a> in our forums.
 				<h2>Contact Us</h2>
 				Got a question or some interest in Breeasy.com opportunities? Drop us a line and ask us:  <a href="http://contact.breeasy.com">How can we help?</a>.
 				<h2>The Breeasy Blog</h2>
 				Keep up with the latest on Breeasy apps, tips and tricks, trends in small business and user stories on <a href="http://www.brze.me">The Breeasy Blog</a>.
+				<h2>100% designed, built, and hosted in the USA. - Never outsourced.</h2>
 				<h2>Follow us on Twitter</h2>
 				<a href="http://twitter.com/easybreeasy" class="twitter-follow-button" data-show-count="false">
 				
