fixed typos and updated promo to july 31

--- a/products/breeasy-for-business/index.html
+++ b/products/breeasy-for-business/index.html
@@ -44,11 +44,11 @@
 	    		<div class="yui-u first">
 	    		<h1>It's About Connections</h1>
 	    		<h2>Breeasy for Business</h2>
-	    		<p>Running a small business takes all your heart, effort and a ton of time. Managing customers, employees, consultants, accountants, and suppliers can chew up a big chunk of your day.  A part of that you would much rather use prospecting for new clients or spending time with your family and friends. <a href="http://app.breeasy.com">Breeasy for Business</a> helps you get organized and puts all your communications, tasks and to do's all in one place - accessible from any internet connected device:  mobile, desktop, laptop and tablet.</p>
-	    		<p>Breeasy for Business is loaded with a ton of features that get help get your small business organized, efficient and increase profits.  For a limited time Breeasy for Business has an <a href="http://www.breeasy.com/plans/index.html">Early Bird Special</a>.</p>
+	    		<p>Running a small business takes all your heart, effort, and a ton of time. Managing customers, employees, consultants and contractors, and suppliers can chew up a big chunk of your day.  <a href="http://app.breeasy.com">Breeasy for Business</a> helps you get organized and puts all your communications, tasks, and to dos in one place - accessible from any internet connected device:  mobile, desktop, laptop, and tablet.</p>
+	    		<p>Breeasy for Business is loaded with a ton of features that can help get your small business organized, efficient, and increase profits.  For a limited time Breeasy for Business has an <a href="http://www.breeasy.com/plans/index.html">Early Bird Special</a>.</p>
 	    		</div>
 	    		<div class="yui-u">
-	    		<img class="hero border" src="../../images/social_business_connections.png" alt="Connect, Manage and Grow with Breeasy for Business" title="Don't worry, be happy.  It's Easy with Breeasy!" width="500" height="280" />
+	    		<img class="hero border" src="../../images/social_business_connections.png" alt="Connect, Manage, and Grow with Breeasy for Business" title="Don't worry, be happy.  It's Easy with Breeasy!" width="500" height="280" />
 
 	    		</div>
 	    	</div>
@@ -61,8 +61,8 @@
 			</thead>
 			<tbody>
 					<tr>
-					<td><strong>Dashboard</strong></td><td>Your most recent tasks, to dos and contacts all in one place.</td>
-					<td><strong>Users</strong></td><td>Add your employees, consultants, and collegues.</td>
+					<td><strong>Dashboard</strong></td><td>Your most recent tasks, to dos, and contacts all in one place.</td>
+					<td><strong>Users</strong></td><td>Add your employees, consultants, and colleagues.</td>
 				</tr>
 				<tr>
 					<td><strong>To Dos</strong></td><td>Create a never ending To Do list.  Assign and organize by priority.</td>
@@ -70,7 +70,7 @@
 					events.</td>
 				</tr>
 				<tr>
-				<td><strong>Contacts</strong></td><td>Manage Contacts - prospective, current and past.</td>
+				<td><strong>Contacts</strong></td><td>Manage Contacts - prospective, current, and past.</td>
 				<td><strong>Companies</strong></td><td>Manage Companies and associate contacts with those companies.</td>
 				</tr>
 				<tr>
@@ -80,7 +80,7 @@
 				<tr>
 				<td><strong><a href="features/customer-service-incident.html">CSIs</a></strong></td><td>Manage customer issues with a Customer Service Incident.  Assign to a colleague, and track
 				resolutions.</td>
-				<td><strong>Reminders</strong></td><td>Never forget - task, event and do do Reminders all in your inbox.</td>
+				<td><strong>Reminders</strong></td><td>Never forget - task, event, and to do Reminders all in your inbox.</td>
 				</tr>
 				<tr>
 				<td><strong>Projects</strong></td><td>Easy-to-use Project Management to keep you and your team on track.</td>
@@ -88,7 +88,7 @@
 				</tr>
 				<tr>
 				<td><strong><a href="features/lists.html">Lists</a></strong></td><td>Create and use repeatable Lists and attach them to tasks.</td>
-				<td><strong>Daily Digest</strong></td><td>Your to dos, tasks and events delivered each mornig to your email.</td>
+				<td><strong>Daily Digest</strong></td><td>Your to dos, tasks, and events delivered each morning to your email.</td>
 				</tr>
 				<tr>
 				<td><strong>Follow</strong></td><td>Follow other Breeasy companies - make connections.</td>
@@ -101,11 +101,11 @@
 				<td><strong>Support Forum</strong></td><td>Find answers to your questions or post a question.</td>
 				</tr>
 				<tr>
-				<td><strong>Notes</strong></td><td>Attach Notes to contacts, events, projects, companies.</td>
+				<td><strong>Notes</strong></td><td>Attach Notes to contacts, events, projects, and companies.</td>
 				<td><strong>Calls</strong></td><td>Log a Call and link to your contacts.  Never forget anything you discussed.</td>
 				</tr>
 				<tr>
-				<td><strong>Conversations</strong></td><td>Keep you Conversations organized and get out of email hell.</td>
+				<td><strong>Conversations</strong></td><td>Keep your Conversations organized and get out of email hell.</td>
 				<td><strong>Search</strong></td><td>Find everything - Save time.</td>
 				</tr>
 				<tr>
@@ -114,8 +114,8 @@
 				</tr>
 <!-- 				<tr><td>Twitter</td><td>Integrate with your twitter account</td><td>Facebook</td><td>Breeasy is Facebook friendly.</td></tr> -->
 				<tr>
-				<td><strong>Don't Repeat Yourself</strong></td><td>Copy previous events, tasks, lists, agendas and to dos.</td>
-				<td><strong>Suppliers</strong></td><td>Keep track of consultants, accountants, lawyers, too!</td>
+				<td><strong>Don't Repeat Yourself</strong></td><td>Copy previous events, tasks, lists, agendas, and to dos.</td>
+				<td><strong>Suppliers</strong></td><td>Keep track of consultants, accountants, and lawyers too!</td>
 				</tr>
 				<tr>
 				<td><strong>Account</strong></td><td>Your company - the top of the BfB food chain.</td>
