--- a/products/breeasy-billing-center/index.html
+++ b/products/breeasy-billing-center/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Billing, Cash Management, Free Invoice Software, Cash Flow | Breeasy.com</title>
+	<title>Billing, Cash Management, Time Tracking, Free Invoice Software, Cash Flow | Breeasy.com</title>
 	<meta name="description" content="The Breeasy Billing Center is a free app that helps small business get on top of their invoicing, cash flow and collections.">
 	<link rel="stylesheet" type="text/css" href="../../css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="../../css/base-min.css">
@@ -60,16 +60,21 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td><strong>Create Invoices</strong></td><td>Simple, easy, and quick.</td>
+					<td><strong>Create Invoices</strong></td><td>Simple, easy, and quick via email.</td>
 					<td><strong>Record Payments</strong></td><td>Allocate payments to your invoices. Track under-payments.</td>
 				</tr>
+				<tr>
+					<td><strong>Track Time</strong></td><td>Manage billable hours.</td>
+					<td><strong>Invoice Billable Hours</strong></td><td>Super simple invoices.</td>
+				</tr>
+
 				<tr>
 				<td><strong>A/R Aging</strong></td><td>How old is your Accounts Receivable?</td>
 				<td><strong>Past Due Report</strong></td><td>Find out who needs to be called for payment.</td>
 				</tr>
 				<tr>
 					<td><strong>One Button Resend</strong></td><td>Invoice lost?  Resend it in a flash.</td>
-					<td><strong>Look Professional</strong></td><td>Our invoice template is easy to read and looks good.</td>
+					<td><strong>Look Professional</strong></td><td>Our invoice templates are easy to read and look good.</td>
 				</tr>
 				<tr>
 					<td><strong>Automatic Receipt</strong></td><td>Just check the box when you enter a payment.</td>
