--- a/products/breeasy-for-business/index.html
+++ b/products/breeasy-for-business/index.html
@@ -62,7 +62,7 @@
 			<tbody>
 					<tr>
 					<td><strong>Dashboard</strong></td><td>Your most recent tasks, to dos, and contacts all in one place.</td>
-					<td><strong>Users</strong></td><td>Add your employees, consultants, and colleagues.</td>
+					<td><strong><a href="http://www.breeasy.com/products/breeasy-for-business/features/users.html">Users</strong></td><td>Add your employees, consultants, and colleagues.</td>
 				</tr>
 				<tr>
 					<td><strong>To Dos</strong></td><td>Create a never ending To Do list.  Assign and organize by priority.</td>
@@ -78,7 +78,7 @@
 				<td>Enter frequent Locations and create events quickly and easily.</td>
 				</tr>
 				<tr>
-				<td><strong><a href="features/customer-service-incident.html">CSIs</a></strong></td><td>Manage customer issues with a Customer Service Incident.  Assign to a colleague, and track
+				<td><strong><a href="http://www.breeasy.com/products/breeasy-for-business/features/customer-service-incident.html">CSIs</a></strong></td><td>Manage customer issues with a Customer Service Incident.  Assign to a colleague, and track
 				resolutions.</td>
 				<td><strong>Reminders</strong></td><td>Never forget - task, event, and to do Reminders all in your inbox.</td>
 				</tr>
@@ -87,7 +87,7 @@
 				<td><strong>Calendars</strong></td><td>See events across your organization.</td>
 				</tr>
 				<tr>
-				<td><strong><a href="features/lists.html">Lists</a></strong></td><td>Create and use repeatable Lists and attach them to tasks.</td>
+				<td><strong><a href="http://www.breeasy.com/products/breeasy-for-business/features/lists.html">Lists</a></strong></td><td>Create and use repeatable Lists and attach them to tasks.</td>
 				<td><strong>Daily Digest</strong></td><td>Your to dos, tasks, and events delivered each morning to your email.</td>
 				</tr>
 				<tr>
@@ -119,7 +119,7 @@
 				</tr>
 				<tr>
 				<td><strong>Account</strong></td><td>Your company - the top of the BfB food chain.</td>
-				<td><strong><a href="features/notepad.html">Notepad</strong></td><td>An easy way to keep your thoughts and notes organized.</td>
+				<td><strong><a href="http://www.breeasy.com/products/breeasy-for-business/features/notepad.html">Notepad</strong></td><td>An easy way to keep your thoughts and notes organized.</td>
 				</tr>
 			</tbody>
 			</table>
