updated links and BBC

--- a/products/breeasy-billing-center/index.html
+++ b/products/breeasy-billing-center/index.html
@@ -82,7 +82,7 @@
 				</tr>
 			</tbody>
 			</table>
-			<blockquote>"After I built <a href"http://www.breeasy.com/breeasy-for-business">Breeasy for Business</a>, I felt something was missing.  Sometimes, you need a tool that does one thing, and does that one thing great.  Throughout my business career one of the biggest challenges I've faced is cash management and collections.  I've learned that getting invoices to clients quickly and accurately is the first step to good cash flow.  Because it's so important to every business, I decided this tool needs to be free, always."<br>
+			<blockquote>"After I built <a href="http://www.breeasy.com/products/breeasy-for-business">Breeasy for Business (BFB)</a>, I felt something was missing.  Sometimes, you need a tool that does one thing, and does that one thing great.  Throughout my business career one of the biggest challenges I've faced is cash management and collections.  I've learned that getting invoices to clients quickly and accurately is the first step to good cash flow.  Because it's so important to every business, I decided this tool needs to be free, always."<br>
 - Tom 0., Founder, Breeasy.com - On what inspired him to create the <a href="http://billing.breeasy.com">simple, free invoicing app</a>.
 </blockquote>
 			<p>Go get yours - your cash that is:  <a href="http://billing.breeasy.com">Bill Faster Today</a>.</p>
