--- a/products/index.html
+++ b/products/index.html
@@ -52,8 +52,8 @@
 	    			<li>Create To Do Lists</li>
 	    			<li>Create and Assign Tasks</li>
 	    			<li>Create and View Events with Calendars</li>
-	    			<li>Manage Employees, Consultants</li>
-	    			<li>Project Management</li>
+	    			<li>Manage Employees, Consultants, and Freelancers</li>
+	    			<li>Simple Project Management</li>
 	    			<li>Reminders - To Dos, Tasks, Events</li>
 	    			<li>Reporting</li>
 	    			<li>And More....</li>
@@ -65,9 +65,10 @@
 	    			<p>Sometimes, you just need to get an invoice or a bill immediately to your client, without any hassle.  That's where <a href="http://www.breeasy.com/products/breeasy-billing-center/index.html">The Breeasy Billing Center</a> can help.  Cloud based, free, and super simple, you can create invoices, record payments and keep track of your cash.</p>
 	    			<ul class="features">
 	    			<li>Create and Email Invoices on the Fly</li>
-	    			<li>Manage Accounts Receivables</li>
+	    			<li>Manage Accounts Receivable</li>
 	    			<li>Accounts Receivable Aging</li>
 	    			<li>Past Due Reports</li>
+	    			<li>Track and Invoice Billable Hours</li>
 					</ul>
 					<p>Not ready for all that Breeasy for Business can do for you?  The Breeasy Billing Center is a great way to give us a try <a href="http://billing.breeasy.com">Free, Forever</a>.<br>   You can read more about <a href="http://www.breeasy.com/products/breeasy-billing-center">Invoicing, Billing and Cash Management</a>.</p>
 		
