added some bfb feature pages

--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -39,7 +39,7 @@
 				</ul>
 				
 			</div>
-			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > Opportunities > Jump: <a href="#jobs">Jobs</a>  <a href="#partner">Partner</a>  <a href="#investment">Investment</a></div>
+			<div class="breadcrumbs"><a href="http://www.breeasy.com">Breeasy.com</a> > Opportunities > Jump: <a href="#jobs">Jobs</a> <a href="#investment">Investment</a></div>
 		</div> <!-- hd -->
 		<div id='bd'>
 			<div class="yui-g">
@@ -63,7 +63,7 @@
 	        <p>Private Label Breeasy is a great opportunity to run a web-based business without having to be a developer or web expert.  You can be up and running in in as few as <em>two weeks</em>.  Contact us <a href="http://contact.breeasy.com">to start your turnkey web-based business</a> or to discuss private label <a href="http://contact.breeasy.com">opportunities for your existing business</a>.</p>
 	        <h2 class='section_header'>Master Licensing Opportunities</h2>
 	        <p>Perhaps you want to run your own, independent version of Breeasy in a specific country.  Regional Master License Opportunities are currently available the UK, Australia, New Zealand, Canada as well as Europe and Asia.</p>
-	        <p>Or, maybe you manage or our familiar with a certain market segment or vertical that could use a version of Breeasy just for that industry. Industry Vertical Master License Programs are available or most industries such as Personal Trainers, Accountants, Consultants, Developers, and Legal to name a few.</p>
+	        <p>Or, maybe you manage or are an expert with a certain market segment or vertical that could use a version of Breeasy exclusive for that niche. Industry Vertical Master License Programs are available for most industries such as Personal Trainers, Accountants, Consultants, Developers, and Legal to name a few.</p>
 	        <p>The basics of the Master License Program are:</p>
 		        <ul class="features">
 		        <li>Upfront license fee with recurring per subscription license fees.  Upfront and recurring license fees are based on size of opportunity. Breeasy hosts and maintains your applications.  Licensee can host and maintain if desired.  Licensee provides Tier 1 and Tier 2 support.  Licensee can create own affiliate and sub-licensing arrangements.  Custom Application Design and features are billed on a quote basis.  Upgrades are included.  Each Master License Program is customized with a license fee structure designed to support long-term success for both the Breeasy and the Licensee.</li>
@@ -100,24 +100,7 @@
 		        <li>Commission Only - Up to 20% on each sale with ongoing monthly revenue.</li>
 		        </ul>
 		        <p>Interested in any of the exciting and ground floor opportunities at Breeasy?  Please email your resume/cv to tobrien@breeasy.com for consideration.  Based on the number of emails, please accept our apologies if we do not respond. </p>
-		    <a name="partner">
-			<h1>President/Partner, Equity and Investment</h1>
-			<p>Breeasy <a href="http://www.breeasy.com">the small business management platform is growing</a> and we are looking for help.</p>
-			<h2>President/Partner Wanted</h2>
-			<p>Breeasy.com is looking for a business partner who can help get our new cloud-based, small business management platform to the next level.  The ideal candidate would:
-			<ul>
-			<li>Work Closely with <a href="http://www.breeasy.com/about.html">CEO/CTO</a> developing small business products and services</li>
-			<li>Create Marketing Parnterships</li>
-			<li>Hire and manage sales, affiliate, advertising and social media team members</li>
-			<li>Be Responsible for SEO/SEM</li>
-			<li>Identify Beta White Label and Licensing Customers</li>
-			<li>Cash Management</li>
-			<li>Develop and maintain an industry leading Customer Service program and results</li>
-			<li>Develop and market Breeasy local</li>
-			</ul>
-			<p>The right person will receive an equity earn-in position in the company (up to 15% DOE), commissions on company-wide revenue and a base salary upon the company receiving funding (salary amount TBD and DOE). This is an awesome, ground floor opportunity for a self-driven professional to team with an experienced entrepreneur with a track record.</p>  
-			With two live apps, a comprehensive business plan, <a href="http://www.breeasy.com">This is not a typical start-up</a>. This is the start-up opportunity that's got a tremendous start and the one you've been waiting for.
-
+		    
 			If you are interested and have experience in all the above please email your resume/cv to tobrien@breeasy.com</a>. 
 
 			Thanks and I look forward to hearing from you.</p>
