--- a/products/breeasy-billing-center/index.html
+++ b/products/breeasy-billing-center/index.html
@@ -44,7 +44,7 @@
 	    		<div class="yui-u first">
 	    		<h1>Get Paid Faster!</h1>
 	    		<h2>Breeasy Billing Center</h2>
-	    		<p>As a small business owner, you know that cash is the fuel that makes your business hum.  But you don't always have time to create an invoice or bill your customers quickly, efficiently and accurately.  Now, with the <a href="http://billing.breeasy.com">Breeasy Billing Center</a>, you don't have to wait.  You can Create invoices, Record payments, Run reports, and Manage your most important asset:  Cash. Speaking of which, The Breeasy Billing Center is totally free!</p>
+	    		<p>As a small business owner, you know that cash is the fuel that makes your business run.  But you don't always have time to create an invoice or bill your customers quickly, efficiently, and accurately.  Now, with the <a href="http://billing.breeasy.com">Breeasy Billing Center</a>, you don't have to wait.  You can Create invoices, Record payments, Run reports, and Manage your most important asset:  Cash. Speaking of which, The Breeasy Billing Center is totally free!</p>
 	    		</div>
 	    		<div class="yui-u">
 	    		<img class="hero" src="../../images/happy_small_business_man.png" alt="Free Invoicing App" title="Cash is King, get on top of yours" width="380" height="254" />
