--- a/products/breeasy-for-business/index.html
+++ b/products/breeasy-for-business/index.html
@@ -74,7 +74,7 @@
 				<td><strong>Companies</strong></td><td>Manage Companies and associate contacts with those companies.</td>
 				</tr>
 				<tr>
-				<td><strong>Events</strong></td><td>Add Events such as meetings, lunches, and conferences.  Create re-usable Agendas.</td><td><strong>Locations</strong></td>
+				<td><strong><a href="http://www.breeasy.com/products/breeasy-for-business/features/events.html">Events</a></strong></td><td>Add Events such as meetings, lunches, and conferences.  Create re-usable Agendas.</td><td><strong><a href="http://www.breeasy.com/products/breeasy-for-business/features/locations.html">Locations</a></strong></td>
 				<td>Enter frequent Locations and create events quickly and easily.</td>
 				</tr>
 				<tr>
@@ -83,7 +83,7 @@
 				<td><strong>Reminders</strong></td><td>Never forget - task, event, and to do Reminders all in your inbox.</td>
 				</tr>
 				<tr>
-				<td><strong>Projects</strong></td><td>Easy-to-use Project Management to keep you and your team on track.</td>
+				<td><strong><a href="http://www.breeasy.com/products/breeasy-for-business/features/projects.html">Projects</a></strong></td><td>Easy-to-use Project Management to keep you and your team on track.</td>
 				<td><strong>Calendars</strong></td><td>See events across your organization.</td>
 				</tr>
 				<tr>
